--- a/doc/plotsrc/all.tex
+++ b/doc/plotsrc/all.tex
@@ -148,6 +148,6 @@ appropriate directory.
 
 \input{tex/flatplane.tex}
 
-\input{tex/sphericalplane.tex}
+\input{tex/sphereandplane.tex}
 
 \end{document}
