Upper-limit crash fixed on label in whole dimension
When a given label in a dataset extends over a whole dimension, the random
number generator would crash until now. The reason was that the size of the
label along that dimension would be the same as the input's size,
therefore, the difference minus one would be the largest possible unsigned
type, which is much larger than the expected range of the integer random
number generator.

To fix the problem, when a label extends over a whole dimension, the value
is now be fixed to zero (to only allow variation along other dimensions).

This fixes bug #52281.

--- a/NEWS
+++ b/NEWS
@@ -102,6 +102,8 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   CFITSIO 3.42 and libcurl crash at Gnuastro configure time (bug #52152).
 
+  MakeCatalog crash in upper-limit with full size label (bug #52281).
+
 
 
 * Noteworthy changes in release 0.4 (library 2.0.0) (2017-09-13) [stable]
